[project]
name = "Gusphobia"
version = "0.0.1"
authors = [
  { name="Gustavo Schip", email="gustavoschip@proton.me" },
]
description = "My program for use with the Phasmophobia video game."
readme = "README.md"
license = "LICENSE"
requires-python = ">=3.8"
dependencies = [
    "click",
    "pydantic",
    "typing"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/GustavoSchip/Gusphobia"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/Gusphobia"]
