[project]
name = "gusphobia"
version = "0.0.1"
authors = [
    { name = "Gustavo Schip", email = "gustavoschip@proton.me" },
]
description = "My program for use with the Phasmophobia video game."
readme = "README.md"
requires-python = ">=3.8, < 3.12"
dependencies = [
    "click >= 8.1.7, < 9",
    "pydantic >= 2.8.2, < 3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/GustavoSchip/Gusphobia"

[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [ "src/gusphobia" ]

[tool.isort]
profile = "black"
skip_gitignore = true
filter_files = true
src_paths = [ "src" ]
